--- a/public/bot.html
+++ b/public/bot.html
@@ -45,11 +45,11 @@
 								</li>
 								<li class="menu"><a href="calc.html"><span class="glyphicon glyphicon-scale"></span> Body Composition Calculator</a>
 								</li>
-								<li class="menu"><a href="effthisplace.html"><span class="glyphicon glyphicon-globe"></span> Eff This Place</a>
-								</li>
+								<!--<li class="menu"><a href="effthisplace.html"><span class="glyphicon glyphicon-globe"></span> Eff This Place</a>-->
+								<!--</li>-->
 								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
 								</li>
-								<li class="menu"><a href="bot.html"><span class="glyphicon glyphicon-comment"></span> Bot!</a>
+								<li class="menu"><a href="bot.html"><span class="glyphicon glyphicon-comment"></span> Generator</a>
 								</li>
 							</ul>
 						</div>
@@ -62,7 +62,7 @@
 				<!--Content-->
 				<h1 style="color: #ddd;">Resume Bullet Generator</h1>
 					<div class="col-sm-12 panel panel-body">
-						<p>I made a resume bullet generator bot by feeding my resume into a Markov engine. It's kinda funny.</p>
+						<p>I made a resume bullet generator by feeding every sentence in my resume into a Markov engine. It's kinda funny.</p>
 						<h2 id="generated_title"></h2>
 						<button id="generate" class="btn"></button>
 					</div>
