--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 								<!--</li>-->
 								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
 								</li>								
-								<li class="menu"><a href="bot.html"><span class="glyphicon glyphicon-comment"></span> Bot!</a>
+								<li class="menu"><a href="bot.html"><span class="glyphicon glyphicon-comment"></span> Generator</a>
 								</li>
 							</ul>
 						</div>
