--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 				<!--Content-->
 				<h1 style="color: #ddd;">I Have No Idea What I'm Doing</h1>
 				<div class="panel panel-body">
-					<p>PERSON: Hey Caleb, this website sucks...STILL!!</p>
+					<p>PERSON: Hey Caleb, this website sucks...STILL!!!</p>
 					<p>CALEB: I know. This was just meant to be a place for me to practice my meager skills, but I've been super busy for a long time. Please don't look too deep.</p>
 					<p>PERSON: ...but....sucks!</p>
 					<p>CALEB: Give it a rest. I'm working on redeveloping everything and finding a new host. Maybe in a couple weeks I'll have something deployed.</p>
