--- a/public/index.html
+++ b/public/index.html
@@ -49,19 +49,16 @@
 								</li>
 							</ul>
 						</div>
-						<!--/.nav-collapse -->
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-9">
 
-				<!--Content-->
-				<h1 style="color: #ddd;">I Have No Idea What I'm Doing</h1>
+				<h1 style="color: #ddd;">I Have Never Been A Good Developer</h1>
 				<div class="panel panel-body">
-					<p>PERSON: Hey Caleb, this website sucks...STILL!!!</p>
-					<p>CALEB: I know. This was just meant to be a place for me to practice my meager skills, but I've been super busy for a long time. Please don't look too deep.</p>
-					<p>PERSON: ...but....sucks!</p>
-					<p>CALEB: Give it a rest. I'm working on redeveloping everything and finding a new host. Maybe in a couple weeks I'll have something deployed.</p>
+					<p>PERSON: Hey Caleb, this website SUCKS!!!</p>
+					<p>CALEB: I know. I'm a terrible developer. This was just meant to be a place for me to practice my meager skills and dump my resume.</p>
+					<p>CALEB: Sometime I redevelop portions of this, but it's all basically a giant experiment. Don't read into it too much.</p>
 					<p>Check me out on:</p>
 					<ul>
 						<li><a href="https://github.com/kirishoru"><i class="fa fa-github-square"></i> GitHub</a>
@@ -72,14 +69,8 @@
 						</li>
 					</ul>
 				</div>
-				<!--<h2>POSTS!!</h2>-->
-				<div id="postFeed"></div>
-				<!--<div class="panel panel-body" id="postFeed"></div>-->
-				<!--End Content-->
-
 			</div>
 		</div>
 	</div>
-	<script src="js/posts.js"></script>
 </body>
 </html>
