--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@
 				<h1 style="color: #ddd;">I Have Never Been A Good Developer</h1>
 				<div class="panel panel-body">
 					<p>PERSON: Hey Caleb, this website SUCKS!!!</p>
-					<p>CALEB: I know. I'm a terrible developer. This was just meant to be a place for me to practice my meager skills and dump my resume.</p>
-					<p>CALEB: Sometime I redevelop portions of this, but it's all basically a giant experiment. Don't read into it too much.</p>
+					<p>CALEB: I know. I'm a terrible developer. This was just meant to be a place for me to practice my meager skills and dump my resume. Sometimes I redevelop portions of this, but it's all basically a giant experiment. Don't read into it too much.</p>
+					<p></p>
 					<p>Check me out on:</p>
 					<ul>
 						<li><a href="https://github.com/kirishoru"><i class="fa fa-github-square"></i> GitHub</a>
