--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 			</div>
 			<div class="col-sm-9">
 
-				<h1 style="color: #ddd;">I Have Never Been A Good Developer</h1>
+				<h1>I Have Never Been A Good Developer</h1>
 				<div class="panel panel-body">
 					<p>PERSON: Hey Caleb, this website SUCKS!!!</p>
 					<p>CALEB: I know. I'm a terrible developer. This was just meant to be a place for me to practice my meager skills and dump my resume. Sometimes I redevelop portions of this, but it's all basically a giant experiment. Don't read into it too much.</p>
