--- a/public/bot.html
+++ b/public/bot.html
@@ -58,10 +58,10 @@
 			<div class="col-sm-9">
 
 				<!--Content-->
-				<h1 style="color: #ddd;">Resume Bullet Generator</h1>
+				<h1>Resume Bullet Generator</h1>
 					<div class="col-sm-12 panel panel-body">
 						<p>I made a resume bullet generator by feeding every sentence in my resume into a Markov engine. It's kinda funny.</p>
-						<h2 id="generated_title"></h2>
+						<h3 id="generated_title"></h3>
 						<button id="generate" class="btn"></button>
 					</div>
 				<!--End Content-->
