--- a/public/dash.html
+++ b/public/dash.html
@@ -57,23 +57,14 @@
 			</div>
 			<div class="col-sm-9">
 				<div class="row">
-					<div class="panel panel-body">
-						<p>I intended to use this area to practice designing data visualizations. The piece below was just a throwaway built with D3. I may add more as I get a chance to design them.</p>
-						<p>This area is a work in progress.</p>
+					<div class="col-sm-11 panel panel-body">
+						<p>I wanted to level-up my use of data visualizations. The piece below was just a throwaway built with D3. Turns out I suck at that.</p>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-sm-5 col-xs-12 panel panel-body dashPanel" id="dash1">
+					<div class="col-sm-11 panel panel-body" id="dash1">
 						<h3><span class="fa fa-tasks"></span> Website Progress</h3></div>
-					<!--<div class="col-sm-5 col-xs-12 panel panel-body dashPanel" id="dash2">-->
-						<!--<h3><span class="fa fa-pie-chart"></span> EffThisPlace Ratings</h3></div>-->
 				</div>
-				<!--<div class="row">-->
-					<!--<div class="col-sm-5 col-xs-12 panel panel-body dashPanel" id="dash3">-->
-						<!--<h3><span class="fa fa-spinner"></span> Coming Soon</h3></div>-->
-					<!--<div class="col-sm-5 col-xs-12 panel panel-body dashPanel" id="dash4">-->
-						<!--<h3><span class="fa fa-spinner"></span> Coming Soon</h3></div>-->
-				<!--</div>-->
 			</div>
 		</div>
 	</div>
