started resume update

--- a/public/resume.html
+++ b/public/resume.html
@@ -10,7 +10,7 @@
 	<script src="js/script.js"></script>
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -43,8 +43,6 @@
 								</li>
 								<li class="menu"><a href="calc.html"><span class="glyphicon glyphicon-scale"></span> Body Composition Calculator</a>
 								</li>
-								<!--<li class="menu"><a href="effthisplace.html"><span class="glyphicon glyphicon-globe"></span> Eff This Place</a>-->
-								<!--</li>-->
 								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
 								</li>
 								<li class="menu"><a href="bot.html"><span class="glyphicon glyphicon-comment"></span> Generator</a>
@@ -56,10 +54,10 @@
 					</div>
 				</div>
 				<div class="panel text-center panel-body">
-<!--					<img class="img img-responsive img-thumbnail" src="http://graph.facebook.com/kirishoru/picture?height=150&width=150">-->
 					<div class="text-left">
-					<h5><strong>CERTIFICATIONS</strong></h5>
+					<h5><strong>EDUCATION/CERTIFICATIONS</strong></h5>
 					<ul>
+						<li><span class="fa fa-check-circle-o"></span> Portland State University, Project Management</li>
 						<li><span class="fa fa-check-circle-o"></span> ITILv3 Foundation</li>
 						<li><span class="fa fa-check-circle-o"></span> Certified Scrum Master(CSM)</li>
 					</ul></div>
@@ -68,7 +66,6 @@
 			<div class="col-sm-9">
 				<!--Content-->
 
-				<!--				<div class="row">-->
 				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 					<div class="panel panel-default">
 						<div class="panel-heading bc-0-3" role="tab" id="headingOne">
@@ -83,17 +80,20 @@
 							<div class="panel-body">
 								<div class="col-sm-6">
 									<span class="fa fa-users pull-left big"></span>
-									<p class="desc">A Software Development Manager with 20 years of program & project management experience that is recognized as an innovative leader, fostering creative solutions, motivating team members, and expertly balancing technical needs with business value.</p>
+									<p class="desc">I am a senior manager with over 20 years of proven leadership experience managing teams and individuals in a dynamic, data driven environment. I have been recognized as a visionary leader and driver of strategy for enterprise technology, and I have a track record of successfully implementing forward thinking technologies that provide real business value. I am passionate about professional development, creating high-performing teams, and fostering a culture of cooperation and positive working relationships.</p>
 								</div>
 								<div class="col-sm-6">
-									<h5><strong>SKILLS</strong></h5>
+									<h5><strong>CORE COMPETENCIES</strong></h5>
 									<ul>
-										<li><span class="fa fa-tasks"></span> Project &amp; Program Management</li>
-										<li><span class="fa fa-refresh"></span> Change &amp; Risk Management</li>
-										<li><span class="fa fa-cogs"></span> Process Improvement</li>
-										<li><span class="fa fa-users"></span> Requirements, Budget, &amp; Estimation</li>
-										<li><span class="fa fa-sitemap"></span> Scrum/Agile SDLCs</li>
-										<li><span class="fa fa-code"></span> JavaScript, jQuery, NodeJS, Angular, Meteor, blah blah blah</li>
+										<li><span class="fa fa-balance-scale"></span> Strategic Leadership & Management</li>
+										<li><span class="fa fa-tasks"></span> Project & Program Management</li>
+										<li><span class="fa fa-dashboard"></span> Portfolio Management</li>
+										<li><span class="fa fa-support"></span> Change & Risk Management</li>
+										<li><span class="fa fa-microchip"></span> Process Improvement & Automation</li>
+										<li><span class="fa fa-sitemap"></span> Agile & Waterfall SDLCs</li>
+										<li><span class="fa fa-user-circle-o"></span> Coaching & Mentoring</li>
+										<li><span class="fa fa-group"></span> Retention & Professional Development</li>
+										<li><span class="fa fa-code"></span> JavaScript, jQuery, NodeJS, blah blah blah</li>
 									</ul>
 								</div>
 							</div>
