--- a/public/resume2.html
+++ b/public/resume2.html
@@ -4,7 +4,6 @@
 <head>
     <title>Kirishoru.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <!--<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>-->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
@@ -16,71 +15,68 @@
 </head>
 
 <body>
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand" href="#"><img src="img/logo.svg" width="30" height="30" alt=""></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="resume.html">Resume</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    Experiments
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="calc.html">Body Composition Calculator</a>
+                    <a class="dropdown-item" href="dash.html">Dashboard</a>
+                    <a class="dropdown-item" href="bot.html">Generator</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<!--Start Resume Page Content-->
+
 <div class="container-fluid">
     <div class="row" style="padding-bottom: 10px;"></div>
-
     <div class="row">
-        <div class="col-sm-3">
-            <div class="sidebar-nav">
-                <div class="navbar navbar-default bc-0-0" role="navigation">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle bc-0-1" data-toggle="collapse"
-                                data-target=".sidebar-navbar-collapse">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-                    <div class="navbar-collapse collapse sidebar-navbar-collapse">
-                        <ul class="nav navbar-nav">
-                            <li class="menu">
-                                <a href="index.html"><img alt="Brand" src="img/logo.svg" height="16px"> Home</a>
-                            </li>
-                            <li class="menu"><a href="resume.html"><span class="glyphicon glyphicon-briefcase"></span>
-                                Resume</a>
-                            </li>
-                            <li class="text-center bc-0-1">
-                                <p class="fc-0-4" style="padding-right:10px;"><span class="caret"></span>
-                                    Experiments<span class="caret"></span>
-                                </p>
-                            </li>
-                            <li class="menu"><a href="calc.html"><span class="glyphicon glyphicon-scale"></span> Body
-                                Composition Calculator</a>
-                            </li>
-                            <li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span>
-                                Dashboard</a>
-                            </li>
-                            <li class="menu"><a href="bot.html"><span class="glyphicon glyphicon-comment"></span>
-                                Generator</a>
-                            </li>
 
-                        </ul>
-                    </div>
-                    <!--/.nav-collapse -->
+        <div class="col-sm-auto">
+            <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+                <div class="card-header">EDUCATION / CERTIFICATIONS</div>
+                <div class="card-body">
+                    <p class="card-text small"><span class="fa fa-check-circle-o"></span> Portland State University,
+                        Project Management</p>
+                    <p class="card-text small"><span class="fa fa-check-circle-o"></span> ITILv3 Foundation</p>
+                    <p class="card-text small"><span class="fa fa-check-circle-o"></span> Certified Scrum Master(CSM)
+                    </p>
                 </div>
             </div>
-            <div class="panel text-center panel-body">
-                <div class="text-left">
-                    <h5><strong>EDUCATION/CERTIFICATIONS</strong></h5>
-                    <ul>
-                        <li><span class="fa fa-check-circle-o"></span> Portland State University, Project Management
-                        </li>
-                        <li><span class="fa fa-check-circle-o"></span> ITILv3 Foundation</li>
-                        <li><span class="fa fa-check-circle-o"></span> Certified Scrum Master(CSM)</li>
-                    </ul>
-                </div>
+            <div id="scroll-list" class="card-body mb-3"></div>
+        </div>
+
+        <!--Start dynamic resume-->
+
+        <div class="col-sm">
+            <div data-spy="scroll" data-target="#myList" data-offset="0" id="scroll-card">
+                <header></header>
+                <section></section>
             </div>
         </div>
-        <!--Content-->
 
-        <header></header>
-        <section></section>
-
+        <!--end dynamic resume-->
     </div>
-
-    <!--End Content-->
 </div>
-<!--	</div>-->
+
+<!--End Resume Page Content-->
 
 <script type="text/javascript" src="js/resume.js"></script>
 
