--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+<!--<% include ../partials %>-->
 
 <head>
 	<title>Kirishoru.com</title>
@@ -7,14 +8,17 @@
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
-	<script src="js/script.js"></script>
-	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	<script src="../../js/script.js"></script>
+	<link rel="icon" href="../../img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../../css/style.css">
 </head>
 
 <body>
+
+<!--<% include ../partials %>-->
+
 	<div class="container-fluid">
 		<div class="row" style="padding-bottom: 10px;"></div>
 
@@ -33,19 +37,19 @@
 						<div class="navbar-collapse collapse sidebar-navbar-collapse">
 							<ul class="nav navbar-nav">
 								<li class="menu">
-									<a href="index.html"><img alt="Brand" src="img/logo.svg" height="16px"> Home</a>
+									<a href="index.html"><img alt="Brand" src="../../img/logo.svg" height="16px"> Home</a>
 								</li>
-								<li class="menu"><a href="resume.html"><span class="glyphicon glyphicon-briefcase"></span> Resume</a>
+								<li class="menu"><a href="../../resume.html"><span class="glyphicon glyphicon-briefcase"></span> Resume</a>
 								</li>
 								<li class="text-center bc-0-1">
 									<p class="fc-0-4" style="padding-right:10px;"><span class="caret"></span> Experiments<span class="caret"></span>
 									</p>
 								</li>
-								<li class="menu"><a href="calc.html"><span class="glyphicon glyphicon-scale"></span> Body Composition Calculator</a>
+								<li class="menu"><a href="../../calc.html"><span class="glyphicon glyphicon-scale"></span> Body Composition Calculator</a>
 								</li>
-								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
+								<li class="menu"><a href="../../dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
 								</li>								
-								<li class="menu"><a href="bot.html"><span class="glyphicon glyphicon-comment"></span> Generator</a>
+								<li class="menu"><a href="../../bot.html"><span class="glyphicon glyphicon-comment"></span> Generator</a>
 								</li>
 							</ul>
 						</div>
