--- a/public/resume.html
+++ b/public/resume.html
@@ -1,223 +1,86 @@
 <!doctype html>
 <html>
 
+<!--<% include ../partials %>-->
 <head>
-	<title>Kirishoru.com</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
-	<script src="js/script.js"></script>
-	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css">
+    <meta charset=”UTF-8">
+    <meta http-equiv=”X-UA-Compatible” content=”IE=edge”>
+    <meta name=”viewport” content=”width=device-width, initial-scale=1">
+    <title>Kirishoru.com</title>
+    <script src="../../js/jquery-3.3.1.min.js"></script>
+    <script src="../../js/bootstrap.min.js"></script>
+    <link rel="icon" href="../../img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../css/style.css">
+
 </head>
 
 <body>
-	<div class="container-fluid">
-		<div class="row" style="padding-bottom: 10px;">
-		</div>
+<!--<% include ../partials %>-->
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand" href="#"><img src="img/logo.svg" width="30" height="30" alt=""></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-		<div class="row">
-			<div class="col-sm-3">
-				<div class="sidebar-nav">
-					<div class="navbar navbar-default bc-0-0" role="navigation">
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle bc-0-1" data-toggle="collapse" data-target=".sidebar-navbar-collapse">
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>
-						</div>
-						<div class="navbar-collapse collapse sidebar-navbar-collapse">
-							<ul class="nav navbar-nav">
-								<li class="menu">
-									<a href="index.html"><img alt="Brand" src="img/logo.svg" height="16px"> Home</a>
-								</li>
-								<li class="menu"><a href="resume.html"><span class="glyphicon glyphicon-briefcase"></span> Resume</a>
-								</li>
-								<li class="text-center bc-0-1">
-									<p class="fc-0-4" style="padding-right:10px;"><span class="caret"></span> Experiments<span class="caret"></span>
-									</p>
-								</li>
-								<li class="menu"><a href="calc.html"><span class="glyphicon glyphicon-scale"></span> Body Composition Calculator</a>
-								</li>
-								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
-								</li>
-								<li class="menu"><a href="bot.html"><span class="glyphicon glyphicon-comment"></span> Generator</a>
-								</li>								
-								
-							</ul>
-						</div>
-						<!--/.nav-collapse -->
-					</div>
-				</div>
-				<div class="panel text-center panel-body">
-					<div class="text-left">
-					<h5><strong>EDUCATION/CERTIFICATIONS</strong></h5>
-					<ul>
-						<li><span class="fa fa-check-circle-o"></span> Portland State University, Project Management</li>
-						<li><span class="fa fa-check-circle-o"></span> ITILv3 Foundation</li>
-						<li><span class="fa fa-check-circle-o"></span> Certified Scrum Master(CSM)</li>
-					</ul></div>
-				</div>
-			</div>
-			<div class="col-sm-9">
-				<!--Content-->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="resume.html">Resume</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    Experiments
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="calc.html">Body Composition Calculator</a>
+                    <a class="dropdown-item" href="dash.html">Dashboard</a>
+                    <a class="dropdown-item" href="bot.html">Generator</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-					<div class="panel panel-default">
-						<div class="panel-heading bc-0-3" role="tab" id="headingOne">
-							<h4 class="panel-title">
-									<a class="clearfix" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-										<div class="col-xs-6 text-left">Overview</div>
-										<div class="col-xs-6 text-right"></div>
-									</a>
-								</h4>
-						</div>
-						<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-							<div class="panel-body">
-								<div class="col-sm-6">
-									<span class="fa fa-users pull-left big"></span>
-									<p class="desc">I am a senior manager with over 20 years of proven leadership experience managing teams and individuals in a dynamic, data driven environment. I have been recognized as a visionary leader and driver of strategy for enterprise technology, and I have a track record of successfully implementing forward thinking technologies that provide real business value. I am passionate about professional development, creating high-performing teams, and fostering a culture of cooperation and positive working relationships.</p>
-								</div>
-								<div class="col-sm-6">
-									<h5><strong>CORE COMPETENCIES</strong></h5>
-									<ul>
-										<li><span class="fa fa-balance-scale"></span> Strategic Leadership & Management</li>
-										<li><span class="fa fa-tasks"></span> Project & Program Management</li>
-										<li><span class="fa fa-dashboard"></span> Portfolio Management</li>
-										<li><span class="fa fa-support"></span> Change & Risk Management</li>
-										<li><span class="fa fa-microchip"></span> Process Improvement & Automation</li>
-										<li><span class="fa fa-sitemap"></span> Agile & Waterfall SDLCs</li>
-										<li><span class="fa fa-user-circle-o"></span> Coaching & Mentoring</li>
-										<li><span class="fa fa-group"></span> Retention & Professional Development</li>
-										<li><span class="fa fa-code"></span> JavaScript, jQuery, NodeJS, blah blah blah</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="panel panel-default">
-						<div class="panel-heading" role="tab" id="headingTwo">
-							<h4 class="panel-title">
-								  <a class="clearfix collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-									 	<div class="col-xs-9 text-left">Software Development Manager <small>HDR, Inc.</small></div>
-										<div class="col-xs-3 text-right">4/2010 - Present</div>
-								  </a>
-								</h4>
-						</div>
-						<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-							<div class="panel-body">
-								<div class="col-sm-6">
-									<h5><strong>RESPONSIBILITIES</strong></h5>
-									<span class="fa fa-users big pull-left"></span>
-									<p>Leads a technology consulting group of multi-platform developers, in-house and outsourced, creating custom solutions for challenging business needs. Provides guidance on strategic technology policy and assesses existing operations to identify potential efficiencies. Communicate with potential clients to identify business needs and evaluate appropriate applications of technology. Build, grow, and coach staff to create high-performance teams.</p>
-								</div>
-								<div class="col-sm-6">
-									<h5><strong>ACCOMPLISHMENTS</strong></h5>
-									<ul>
-										<li><span class="fa fa-circle"></span> Developed a public involvement toolkit, deployed as a mobile-first MongoDB/Node.js application, that allowed collection of custom data within hours. Usage of the template resulted in a 90% decrease in ramp-up costs for comment collection services and provided a framework for sentiment analysis for any public campaign.</li>
-										<li><span class="fa fa-circle"></span> Developed an AngularJS interactive map-based logistical preparedness application for an oil-spill containment group that enables the automation of response plans. The application provided first responders a platform to organize required inventory quicker, resulting in overall time savings of several days for spill events, potentially saving millions of dollars in environmental cleanup.</li>
-										<li><span class="fa fa-circle"></span> Developed a SaaS ASP.NET real property management solution for the Customs and Border Protection division of the U.S. Department of Homeland Security that saved hundreds of hours of integration time by providing templates for an internal asset management solution.</li>
-										<li><span class="fa fa-circle"></span> Optimized and automated the data management and quality assurance processes for legislative reporting within the Oregon Department of Transportation’s (ODOT) State Radio Project, resulting in a 50% reduction in turnaround costs for monthly deliverables, saving the agency hundreds of thousands of dollars over the course of the program.</li>
-										<li><span class="fa fa-circle"></span> Managed the development of a GIS-based ledger tool for environmental mitigation banking that allows agencies to record mitigation activities. The tool was turned into a template that can be deployed with a very short turnaround.</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="panel panel-default">
-						<div class="panel-heading" role="tab" id="headingThree">
-							<h4 class="panel-title">
-								  <a class="clearfix collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-									 	<div class="col-xs-9 text-left">Project Manager <small>HDR, Inc.</small></div>
-										<div class="col-xs-3 text-right">4/2009 - 4/2010</div>									 
-								  </a>
-								</h4>
-						</div>
-						<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-							<div class="panel-body">
-								<div class="col-sm-6">
-									<h5><strong>RESPONSIBILITIES</strong></h5>
-									<span class="fa fa-cogs big pull-left"></span><span class="fa fa-tasks" style="float:left;font-size:4em;margin-right:10px;"></span>
-									<p>Act as the product owner, communicating with clients to identify business needs and evaluate appropriate solutions. Maintain stewardship of the client business needs and challenges. Plan, direct, and monitor all aspects of large multi-discipline projects, agile and non-, with high degree of technical complexity. Responsible for multiple concurrent projects for a broad range of clients and agencies. Develop and maintain team budgets and resource allocations across all projects.</p>
-								</div>
-								<div class="col-sm-6">
-									<h5><strong>ACCOMPLISHMENTS</strong></h5>
-									<ul>
-										<li><span class="fa fa-circle"></span> Introduced agile methodologies into team practices resulting in 50% faster project turnaround and a higher degree of satisfaction in client engagements.</li>
-										<li><span class="fa fa-circle"></span> Virtualized development resources to cloud-based solution resulting in a 50% decrease in infrastructure costs, increased scalability, and expanding potential market penetration.</li>
-										<li><span class="fa fa-circle"></span> Implemented comprehensive defect tracking and source control systems that resulted in 100% faster turnaround of issues and greater control of product development cycle.</li>
-										<li><span class="fa fa-circle"></span> Spearheaded the development of a custom SaaS reporting application compliant with the Federal Office of Management and Budget (OMB) guidelines for the American Recovery and Reinvestment Act (ARRA) that includes a dynamic ad hoc reporting and GIS services to visualize the path of stimulus funds. The platform was utilized by 95% of agencies within the state of Oregon for the entirety of the ARRA reporting requirements, potentially saving millions of dollars in recovery funds.</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="panel panel-default">
-						<div class="panel-heading" role="tab" id="headingFour">
-							<h4 class="panel-title">
-								  <a class="clearfix collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-									 	<div class="col-xs-9 text-left">Enterprise Systems Manager <small>Oregon Bridge Delivery Partners(HDR, Inc.)</small></div>
-										<div class="col-xs-3 text-right">5/2004 - 4/2009</div>									 
-								  </a>
-								</h4>
-						</div>
-						<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-							<div class="panel-body">
-								<div class="col-sm-6">
-									<h5><strong>RESPONSIBILITIES</strong></h5>
-									<span class="fa fa-sitemap big pull-left"></span>
-									<p>Establish a startup joint-venture enterprise architecture and build a technical team for delivery of program goals. Responsible for enterprise technology strategy and establishing policies for technical resource usage by developing standards and best practices for systems, architecture, implementation, and development. Develop performance metrics for demand, capacity, and utilization and advise executives on the benefits and risks of technology strategic goals.</p>
-								</div>
-								<div class="col-sm-6">
-									<h5><strong>ACCOMPLISHMENTS</strong></h5>
-									<ul>
-										<li><span class="fa fa-circle"></span> Co-developed and implemented enterprise level network topology for spin-off joint venture company.</li>
-										<li><span class="fa fa-circle"></span> Developed multiple policies to direct technology service usage throughout the enterprise.</li>
-										<li><span class="fa fa-circle"></span> Implemented numerous measures to decrease risk of loss due to unlicensed software.</li>
-                                        <li><span class="fa fa-circle"></span> Introduced security measures to reduce potential cyber threat.</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="panel panel-default">
-						<div class="panel-heading" role="tab" id="headingFive">
-							<h4 class="panel-title">
-								  <a class="clearfix collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-									 	<div class="col-xs-9 text-left">Senior Systems Analyst <small>Oregon State Legislature</small></div>
-										<div class="col-xs-3 text-right">9/1998 - 5/2004</div>									 
-								  </a>
-								</h4>
-						</div>
-						<div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
-							<div class="panel-body">
-								<div class="col-sm-6">
-									<h5><strong>RESPONSIBILITIES</strong></h5>
-									<span class="fa fa-sitemap big pull-left"></span><span class="fa fa-wrench big pull-left"></span>
+<!--Start Resume Page Content-->
 
-									<p>Provides top-tier support and advanced system troubleshooting for a broad range of software and hardware systems and applications. Design, install, configure, and maintain enterprise network infrastructure and manages performance and security of all systems. Provide technical information to management and staff on the optimal utilization of network capabilities. Recommend ways to utilize appropriate technologies to maximize future benefits. Administers security measures to restrict unauthorized use of network systems and data. Provide assistance and mentoring to junior technical staff.
-									</p>
-								</div>
-								<div class="col-sm-6">
-									<h5><strong>ACCOMPLISHMENTS</strong></h5>
-									<ul>
-										<li><span class="fa fa-circle"></span> Responsible for numerous large scale multi-phase technology deployments.</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+<div class="container-fluid">
+    <div class="row" style="padding-bottom: 10px;"></div>
+    <div class="row">
 
-			<!--End Content-->
-		</div>
-	</div>
-	<!--	</div>-->
+        <div class="col-sm-auto">
+            <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+                <div class="card-header">EDUCATION / CERTIFICATIONS</div>
+                <div class="card-body">
+                    <p class="card-text small"><span class="fa fa-check-circle-o"></span> Portland State University,
+                        Project Management</p>
+                    <p class="card-text small"><span class="fa fa-check-circle-o"></span> ITILv3 Foundation</p>
+                    <p class="card-text small"><span class="fa fa-check-circle-o"></span> Certified Scrum Master(CSM)
+                    </p>
+                </div>
+            </div>
+            <div id="scroll-list" class="card-body mb-3"></div>
+        </div>
+
+        <!--Start dynamic resume-->
+
+        <div class="col-sm">
+            <div data-spy="scroll" data-target="#myList" data-offset="0" id="scroll-card">
+                <header></header>
+                <section></section>
+            </div>
+        </div>
+
+        <!--end dynamic resume-->
+    </div>
+</div>
+
+<!--End Resume Page Content-->
+
+<script type="text/javascript" src="../js/resume.js"></script>
+
 </body>
-
 </html>
