--- a/public/resume.html
+++ b/public/resume.html
@@ -7,12 +7,12 @@
     <meta http-equiv=”X-UA-Compatible” content=”IE=edge”>
     <meta name=”viewport” content=”width=device-width, initial-scale=1">
     <title>Kirishoru.com</title>
-    <script src="../../js/jquery-3.3.1.min.js"></script>
-    <script src="../../js/bootstrap.min.js"></script>
-    <link rel="icon" href="../../img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../../css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../../css/style.css">
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link type="text/css" rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -80,7 +80,7 @@
 
 <!--End Resume Page Content-->
 
-<script type="text/javascript" src="../js/resume.js"></script>
+<script type="text/javascript" src="js/resume.js"></script>
 
 </body>
 </html>
